--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,37 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-        <title><%= htmlWebpackPlugin.options.title %></title>
+        <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicons/favicon-16x16.png">
+        <link rel="manifest" href="<%= BASE_URL %>favicons/site.webmanifest">
+        <link rel="mask-icon" href="<%= BASE_URL %>favicons/safari-pinned-tab.svg" color="#ffffff">
+        <link rel="shortcut icon" href="<%= BASE_URL %>favicons/favicon.ico">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-config" content="<%= BASE_URL %>favicons/browserconfig.xml">
+        <meta name="theme-color" content="#ffffff">
+
+        <meta name="description" content="Waffle is a composer of electronic music, who travelled Parisian scenes. Music promoter, he has many partners. He mixes styles with music rather chill.">
+        <title>Waffle</title>
         <script>
             window.prismic = {
                 endpoint: 'https://waffle.prismic.io/api/v2'
             }
         </script>
         <script src="https://static.cdn.prismic.io/prismic.min.js"></script>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  
+            ga('create', 'UA-92781453-1', 'auto');
+            ga('send', 'pageview');
+        </script>
     </head>
     <body>
         <noscript>
-            <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+            <strong>We're sorry but this website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
         <div id="app"></div>
         <!-- built files will be auto injected -->
